--- a/FSM.qsf
+++ b/FSM.qsf
@@ -84,4 +84,5 @@ set_location_assignment PIN_P9 -to an[4]
 set_location_assignment PIN_N9 -to an[5]
 set_location_assignment PIN_E1 -to clk
 set_location_assignment PIN_N13 -to rst_neg
+set_location_assignment PIN_M15 -to A
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
