--- a/FSM.qsf
+++ b/FSM.qsf
@@ -85,4 +85,5 @@ set_location_assignment PIN_N9 -to an[5]
 set_location_assignment PIN_E1 -to clk
 set_location_assignment PIN_N13 -to rst_neg
 set_location_assignment PIN_M15 -to A
+set_global_assignment -name VERILOG_FILE db/fsm.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
