--- a/FSM.qsf
+++ b/FSM.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE6F17C8
-set_global_assignment -name TOP_LEVEL_ENTITY display
+set_global_assignment -name TOP_LEVEL_ENTITY top_module
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 23.1STD.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "02:31:14  AUGUST 10, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "23.1std.0 Lite Edition"
@@ -66,9 +66,6 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tiempo_tb -section_id tie
 set_global_assignment -name EDA_TEST_BENCH_FILE db/tb_tiempo.v -section_id tiempo_tb
 set_global_assignment -name VERILOG_FILE db/BCD2SSeg.v
 set_global_assignment -name VERILOG_FILE db/display.v
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_location_assignment PIN_R14 -to sseg[0]
 set_location_assignment PIN_N16 -to sseg[1]
 set_location_assignment PIN_P16 -to sseg[2]
@@ -84,7 +81,15 @@ set_location_assignment PIN_P9 -to an[4]
 set_location_assignment PIN_N9 -to an[5]
 set_location_assignment PIN_E1 -to clk
 set_location_assignment PIN_N13 -to rst_neg
-set_location_assignment PIN_M15 -to A
 set_global_assignment -name VERILOG_FILE db/fsm.v
 set_global_assignment -name VERILOG_FILE db/spi_sd.v
+set_location_assignment PIN_D12 -to sd_clk
+set_location_assignment PIN_D11 -to sd_cs
+set_location_assignment PIN_F10 -to sd_in
+set_location_assignment PIN_E15 -to sd_out
+set_global_assignment -name VERILOG_FILE db/top_module.v
+set_location_assignment PIN_E16 -to neg_start
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
